Use filter to prevent options from bad wraps.

--- a/css/screen.css
+++ b/css/screen.css
@@ -3,6 +3,7 @@ html { color: black; padding: 20px 10px 10px 10px; }
 body { font-size: 13pt; line-height: 1.5em; font-family: Georgia, serif; }
 
 code { font-size: 89%; background-color: transparent; }
+span.nowrap code { white-space: nowrap; }
 pre code { font-size: 89%; }
 
 header        { }
